--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,22 +1,27 @@
-<br>
-<mat-card>
+<div class="toolbar"></div>
+<div class="spacer"></div>
+<mat-card class="mat-elevation-z8">
     <mat-card-title>Usuarios</mat-card-title>
     <mat-card-subtitle>Ingresar a usuarios</mat-card-subtitle>
     <mat-card-actions align="end">
-        <button mat-button routerLink="/usuarios" [queryParams]="{op: '1'}">Lista de usuarios</button>
-        <button mat-button routerLink="/usuarios" [queryParams]="{op: '2'}">Buscar usuario</button>
-        <button mat-button style="color: #7cb342;" routerLink="/usuarios" [queryParams]="{op: '3'}">Agregar usuario</button>
-        <button mat-button style="color: #ffc107;" routerLink="/usuarios" [queryParams]="{op: '4'}">Actualizar datos del usuario</button>
-        <button mat-button color="warn" routerLink="/usuarios" [queryParams]="{op: '5'}">Eliminar usuario</button>
+        <div class="container-buttons-card">
+            <button mat-flat-button style="color: #F0F8FF;" routerLink="/usuarios" [queryParams]="{op: '1'}">Lista de usuarios</button>
+            <button mat-flat-button style="color: #F0F8FF;" routerLink="/usuarios" [queryParams]="{op: '2'}">Buscar usuario</button>
+            <button mat-flat-button style="color: #7cb342;" routerLink="/usuarios" [queryParams]="{op: '3'}">Agregar usuario</button>
+            <button mat-flat-button style="color: #ffc107;" routerLink="/usuarios" [queryParams]="{op: '4'}">Actualizar datos del usuario</button>
+            <button mat-flat-button style="color: #ff0000;" routerLink="/usuarios" [queryParams]="{op: '5'}">Eliminar usuario</button>
+        </div>
     </mat-card-actions>
 </mat-card>
-<br>
-<mat-card>
+<div class="spacer"></div>
+<mat-card class="mat-elevation-z8">
     <mat-card-title>Transacciones</mat-card-title>
     <mat-card-subtitle>Ingresar a transacciones</mat-card-subtitle>
     <mat-card-actions align="end">
-        <button mat-button routerLink="/transacciones" [queryParams]="{op: '1'}">Lista de transacciones</button>
-        <button mat-button style="color: #7cb342;" routerLink="/transacciones" [queryParams]="{op: '2'}">Nueva transacción</button>
-        <button mat-button style="color: #ffc107;" routerLink="/transacciones" [queryParams]="{op: '3'}">Buscar transacción</button>
+        <div class="container-buttons-card">
+            <button mat-flat-button style="color: #F0F8FF;" routerLink="/transacciones" [queryParams]="{op: '1'}">Lista de transacciones</button>
+            <button mat-flat-button style="color: #7cb342;" routerLink="/transacciones" [queryParams]="{op: '2'}">Nueva transacción</button>
+            <button mat-flat-button style="color: #ffc107;" routerLink="/transacciones" [queryParams]="{op: '3'}">Buscar transacción</button>
+        </div>
     </mat-card-actions>
 </mat-card>
