--- a/src/app/pages/transacciones/transacciones.component.css
+++ b/src/app/pages/transacciones/transacciones.component.css
@@ -16,7 +16,11 @@ table {
 .container {
     display: flex;
     justify-content: flex-end;
-    margin-top: 30px;
+}
+
+.container button {
+    background-color: #F0F8FF; 
+    color: #182848;
 }
 
 mat-form-field {
@@ -39,6 +43,6 @@ mat-label {
 
 .container-button-valid button {
     width: 100%;
-    background-color: #ffffff;
-    color: black;
+    background-color: #2c3968;
+    color: #F0F8FF;
 }
